--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Rijndorp_MyFirstApp</string>
+    <string name="helloCustomers">Welcome to PLDT trash company!</string>
 </resources>
