--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Rijndorp_MyFirstApp</string>
-    <string name="helloCustomers">Welcome to PLDT trash company!</string>
+    <string name="helloCustomers">Customer Service for an absolutely iredeemable company!</string>
+    <string name="pldt">pldt</string>
+    <string name="click_me_to_boost_wifi">Customer Service Call</string>
 </resources>
